apps/arr-stack/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: arr-stack  
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
      name: http
