apps/arr-stack/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-tailscale
  namespace: arr-stack
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - radarr

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-service
                port:
                  number: 7878
